--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<li><a href="exercice_2.html">Exercice 2</a></li>
 		<li><a href="exercice_3.html">Exercice 3</a></li>
 		<li><a href="exercice_4.html">Exercice 4</a></li>
-		<li><a href="exercice_5.html">Exercice 5</a></li>
+		<li><a href="exercice_5_absolute.html">Exercice 5 (Absolute)</a></li>
+		<li><a href="exercice_5_relatif.html">Exercice 5 (Relatif)</a></li>
 		<li><a href="exercice_6.html">Exercice 6</a></li>
 		<li><a href="exercice_7.html">Exercice 7</a></li>
 		<li><a href="exercice_8.html">Exercice 8</a></li>
