--- a/exercice_7.html
+++ b/exercice_7.html
@@ -3,15 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/exercice6.css">
-	<title>Exercice 6</title>
+	<link rel="stylesheet" type="text/css" href="css/exercice7.css">
+	<title>Exercice 7</title>
 </head>
 <body>
 	<a href="index.html">Menu</a>
-	<h1>Exercice 6</h1>
+	<h1>Exercice 7</h1>
 
-	<div id="turquoise">
-	
+	<section>
 		<div id="vert">
 		</div>
 
@@ -21,8 +20,11 @@
 		<div id="orange">
 		</div>
 
-		<div id="jaune">
+		<div id="gray">
 		</div>
 
-	</div>
+		<div id="jaune">
+		</div>
+	</section>
+</body>
 </html>
